# autopaths

./: .gitignore  README.md  pyproject.toml  setup.py
autopaths/: __init__.py  auto_paths.py  base_path.py  common.py  dir_path.py  file_path.py  file_permissions.py  file_size.py  tmp_path.py
docs/: autopaths.html  index.html  installing_tips.md  search.js
docs/autopaths/: auto_paths.html  base_path.html  common.html  dir_path.html  file_path.html  file_permissions.html  file_size.html  index.html  tmp_path.html
test/: test_dir_path.py  test_file_path.py
testing/: test_dir_path.py  test_file_path.py
